@startuml

title __ANDROIDASSIGNMENT's Class Diagram__\n

  namespace com.example.androidassignment {
    class com.example.androidassignment.ListItemsActivity {
        {static} # ACTIVITY_NAME : String
        # onCreate()
        # onDestroy()
        # onPause()
        # onResume()
        # onStart()
        # onStop()
    }
  }
  

  namespace com.example.androidassignment {
    class com.example.androidassignment.LoginActivity {
        {static} # ACTIVITY_NAME : String
        + onSaveClicked()
        # onCreate()
        # onDestroy()
        # onPause()
        # onResume()
        # onStart()
        # onStop()
        - loadUserData()
        - saveUserData()
    }
  }
  

  namespace com.example.androidassignment {
    class com.example.androidassignment.MainActivity {
        {static} # ACTIVITY_NAME : String
        # onCreate()
        # onDestroy()
        # onPause()
        # onResume()
        # onStart()
        # onStop()
    }
  }
  

  com.example.androidassignment.ListItemsActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.androidassignment.LoginActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.androidassignment.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
